# embedded-fatfs

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INTEGRATION_COMPLETE.md  ISSUE.md  ISSUE_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ROADMAP.md  PHASE2_SUMMARY.md  README.md  TODO.md
.claude/: settings.local.json
block-device-adapters/src/: buf_stream.rs
block-device-driver/: Cargo.toml
block-device-driver/src/: lib.rs
docs/: ARCHITECTURE_ANALYSIS.md  FILE_CORRUPTION_BUG.md  REFACTORING_PLAN.md
embedded-fatfs/: Cargo.toml  README.md
embedded-fatfs-mount/: Cargo.toml
embedded-fatfs-mount/src/: fuse_adapter.rs  main.rs
embedded-fatfs/benches/: cluster_allocation.rs  embassy_unbuffered.rs  random_access.rs  sequential_io.rs  unbuffered_io.rs
embedded-fatfs/examples/: mkfatfs.rs  write.rs
embedded-fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  fat_cache.rs  file.rs  fs.rs  lib.rs  table.rs  (+2 more)
fatrs/: CHANGELOG.md  Cargo.toml
fatrs-adapters/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
fatrs-adapters/src/: lib.rs
fatrs-adapters/src/adapters/: block_device_adapter.rs  error.rs  header_rotating_device.rs  heap_buffer.rs  mod.rs  nor_flash_adapter.rs  stack_buffer.rs
fatrs-adapters/src/domain/: error.rs  mod.rs  page_buffer.rs
fatrs-adapters/src/domain/entities/: mod.rs  page.rs  page_state.rs
fatrs-adapters/src/domain/ports/: block_storage.rs  mod.rs
fatrs-adapters/src/domain/value_objects/: block_address.rs  mod.rs  page_config.rs  page_number.rs
fatrs-adapters/src/infrastructure/: mod.rs
fatrs-adapters/src/infrastructure/streaming/: embedded_io_impl.rs  heap_page_stream.rs  mod.rs  stack_page_stream.rs
fatrs-block-platform/: Cargo.toml
fatrs-cli/: Cargo.toml
(+33 files in other folders)
