[package]
name = "fatrs-adapters"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/EmilLindfors/fatrs"
readme = "README.md"
rust-version = "1.85"
keywords = ["block", "device", "no_std", "adapter", "filesystem"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Block device adapters for fatrs - stack-allocated (no_std) and heap-allocated variants
"""

[dependencies]
aligned = "0.4.2"
embedded-io-async = "0.7"
embedded-storage = { version = "0.3", optional = true }
fatrs-block-device = { version = "0.4", path = "../fatrs-block-device" }

log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }
async-lock = { version = "3.4", optional = true }
tokio = { version = "1", default-features = false, features = ["sync"], optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
embedded-io-adapters = { version = "0.7", package = "embedded-io-adapters", features = ["tokio-1"] }

[features]
default = []
std = ["embedded-io-async/std"]
alloc = []  # Enable heap-allocated adapters
embedded-storage = ["dep:embedded-storage"]  # Enable NOR flash adapter for embedded-storage traits
log = ["dep:log"]
defmt = ["dep:defmt"]

# Async runtime selection (for optimal synchronization primitives with Shared<T>)
runtime-generic = ["dep:async-lock"]  # Use async-lock (default, works everywhere - std and no_std)
runtime-tokio = ["dep:tokio"]  # Use tokio::sync primitives (optimized for tokio runtime)
